feat: coze user separate
